<resources>
    <string name="app_name" translatable="false">onChart</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_http_test" translatable="false">HttpTestActivity</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>

    <string name="weekday_Mon">Mon</string>
    <string name="weekday_Tue">Tue</string>
    <string name="weekday_Wed">Wed</string>
    <string name="weekday_Thi">Thu</string>
    <string name="weekday_Fri">Fri</string>
    <string name="weekday_Sat">Sat</string>
    <string name="weekday_Sun">Sun</string>
    <string name="weekday_null" translatable="false">(null)</string>
    <string name="title_login">Login</string>
    <string name="login_submit">Login</string>
    <string name="message_logout">Are you sure to logout?</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_exam">Exam(beta)</string>
    <string name="action_logout">Logout</string>
    <string name="action_license">Open Source License</string>
    <string name="action_positive">OK</string>
    <string name="action_negative">Cancel</string>
    <string name="action_donate">Donate</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_feedback">Feedback</string>
    <string name="subtitle_morning">Morning</string>
    <string name="subtitle_afternoon">Afternoon</string>
    <string name="subtitle_evening">Evening</string>
    <string name="weekday_week">Week %1$d</string>
    <string name="detail_week_pattern">Week %1$d - %2$d</string>
    <string name="detail_course_time" translatable="false">%1$d:%2$d</string>
    <string name="detail_credit_unit">credit</string>
    <string name="detail_credit">%.1f credit</string>
    <string name="null_stu_name" translatable="false">-</string>

    <string name="num_weekday_five">5 days</string>
    <string name="num_weekday_with_Sat">5 days and Sat</string>
    <string name="num_weekday_with_Sun">5 days and Sun</string>
    <string name="num_weekday_seven">7 days</string>

    <string name="title_num_weekday">Num of days in one week</string>

    <string name="key_logout" translatable="false">logout</string>
    <string name="key_num_of_weekday" translatable="false">num_of_weekday</string>
    <string name="key_name" translatable="false">name</string>
    <string name="key_week" translatable="false">week</string>
    <string name="key_schedule" translatable="false">schedule</string>
    <string name="key_last_fetch_week_time" translatable="false">last_fetch_week</string>
    <string name="key_license" translatable="false">open_source_license</string>
    <string name="key_about" translatable="false">about</string>
    <string name="key_is_first_launch" translatable="false">first_launch</string>
    <string name="key_stu_no" translatable="false">student_number</string>
    <string name="key_psw" translatable="false">password</string>
    <string name="key_feedback" translatable="false">feedback</string>
    <string name="key_last_version_code" translatable="false">last_version_code</string>
    <string name="title_activity_detail">Detail</string>

    <string name="intent_lesson" translatable="false">Lesson</string>
    <string name="intent_position" translatable="false">Position</string>
    <string name="intent_frag_index" translatable="false">Fragment</string>
    <string name="intent_course_id" translatable="false">CourseId</string>
    <string name="intent_label_image_index" translatable="false">ImageIndex</string>

    <string name="trans_detail_item" translatable="false">DetailItem</string>
    <string name="trans_detail_img" translatable="false">DetailImage</string>
    <string name="title_activity_about">About</string>
    <string name="title_account">Stud. No.</string>
    <string name="title_psw">Password</string>
    <string name="title_my_birthday" translatable="false">1995&#8211;06&#8211;12</string>
    <string name="title_week_option">Week</string>
    <string name="text_days">days</string>
    <string name="text_about_copyright" translatable="false">\u00a9 2016 Z.Chang, Apache License v2</string>
    <string name="version_name" translatable="false">1.0</string>

    <string name="title_course_name">Course name</string>

    <string name="url_my_github" translatable="false">https://github.com/LangleyChang/onChart</string>
    <string name="url_download" translatable="false">http://www.wandoujia.com/apps/me.zchang.onchart</string>
    <string name="url_my_email" tranlatable="false" translatable="false">zhehuaxiao@gmail.com</string>

    <string name="text_share">An amazing course schedule app for BIT only!Really convenient to import the schedule instantly!Download it here.</string>
    <string name="wechat_share_title">please star~</string>

    <string name="button_donate">Donate for a cup of coffee</string>

    <string name="alert_no_alipay">Alipay not installed. Just introduce onChart to your friends if you like!</string>
    <string name="alert_clipboard_complete">My Alipay account has been copied in clipboard, just donate 2 yuan to onChart. Thanks.</string>
    <string name="alert_network_error">Connection error. Please Check your Intranet.</string>
    <string name="alert_invalid_account">Invalid student No. or password.</string>
    <string name="alert_no_email_app">No email app found. Click "About" to get my email, and send me email for feedback please.</string>
    <string name="alert_refresh_test_function" translatable="false">This is a testing function, and the stability is not guaranteed.</string>
    <string name="alert_refresh_week_over">Refresh week successfully!</string>
    <string name="alipay_account" translatable="false">zhehua_xiao@163.com</string>

    <string name="title_activity_exams">Exams</string>

    <string name="course_database_name" translatable="false">course_data</string>
    <string name="course_table_name" translatable="false">courses</string>
</resources>
