<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>

        <item
            android:id="@+id/item_schedule"
            android:title="@string/action_schedule"
            android:icon="@drawable/ic_today_black_24dp"/>
        <item
            android:id="@+id/item_exams"
            android:title="@string/action_exam"
            android:icon="@drawable/ic_book_open_variant_black_24dp"
            />
    </group>

    <group android:id="@+id/g_bottom">

        <item
            android:id="@+id/item_share"
            app:actionLayout="@layout/nav_action_item"
            />
        <item
            android:id="@+id/item_donate"
            android:title="@string/action_donate"
            android:icon="@drawable/ic_favorite_black_24dp"/>
        <item
            android:id="@+id/item_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings_black_24dp" />
    </group>
</menu>