<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Hello"
        >


        <ListPreference
            android:key="@string/key_num_of_weekday"
            android:title="@string/pref_title_add_friends_to_messages"
            android:defaultValue="5"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="More" >

        <Preference
            android:title="@string/action_about">
            <intent
                android:targetPackage="me.zchang.onchart"
                android:targetClass="me.zchang.onchart.ui.AboutActivity"
                />
        </Preference>

        <Preference
            android:key="@string/key_logout"
            android:title="@string/action_logout">

        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
