<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="152dp"
            android:background="@mipmap/drawer_header_bg"
            >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/rl_login_click"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        >
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_circle_white_24dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_toEndOf="@+id/iv_avatar"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_avatar"
            android:id="@+id/tv_stu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:alpha="0.87"
            android:layout_marginLeft="22dp"/>
        <TextView
            android:id="@+id/tv_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_week"
            android:text="Hello"
            android:textColor="@color/white"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday_week"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="5dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="72dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/primary_text_dark"
            android:id="@+id/tv_title"
            android:textSize="21sp"
            android:textStyle="bold"
            />

        <TextView
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:layout_alignLeft="@+id/tv_title"
            android:id="@+id/tv_version"
            android:layout_below="@+id/tv_title"
            android:textColor="@android:color/secondary_text_dark"/>

    </RelativeLayout>


</FrameLayout>